--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,11 @@
             android:theme="@style/Theme.BaseApplication.NoActionBar" />
 
         <activity
+            android:name=".Activity_ScreenShot"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.BaseApplication.NoActionBar" />
+
+        <activity
             android:name=".Activity_Lottie"
             android:label="@string/app_name"
             android:theme="@style/Theme.BaseApplication.NoActionBar"></activity>
